<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tcebot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dhanushshettigar90@gmail.com">dhanush</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>tcebot_description</exec_depend>
  <exec_depend>tcebot_control</exec_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
